test/sema/too-many-arguments.delta.output
too-many-arguments.delta:6:25: error: too many arguments to 'sum', expected 2
void main() { var foo = sum(1, 2, 3); }
                        ^
