test/sema/too-many-arguments.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

int sum(int a, int b) { return a + b; }

// CHECK: [[@LINE+1]]:25: error: too many arguments to 'sum', expected 2
void main() { var foo = sum(1, 2, 3); }
